# aethera

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SESSION.md  TODO.md  alembic.ini  import_post.py  irc_admin.py  pyproject.toml  review_generations.py  seed_data.py  setup.ps1  test_generation_inspect.py  test_long_post.md  transmission.md
aethera/: __init__.py  main.py
apeiron/: package.json  tsconfig.json  vite.config.ts
docs/: AGENTS.md  DEPLOY.md  DREAMS_API.md  IRC_ADMIN_WEB_UI_SPEC.md  IRC_DISCORD_BOT_SPEC.md  IRC_HANDOFF.md  QA_REPORT.md  STATEFUL_JUDGE_PLAN.md  TWO_ACT_STRUCTURE_PLAN.md  discussion.md  styling.md  todo.md
exported_fragments/: README_CURATED.md  TIER_A_strong_additions.txt  TIER_B_variety.txt  TIER_S_top_picks.txt  all_fragments.txt  irc_chaotic_corruption_20260104_221209.txt  irc_chaotic_mass_kick_20260104_211956.txt  irc_chaotic_mass_kick_20260104_222107.txt  irc_chaotic_mass_kick_20260104_230616.txt  irc_chaotic_mass_kick_20260104_233427.txt  irc_chaotic_netsplit_20260104_204947.txt  irc_chaotic_netsplit_20260104_220426.txt  irc_chaotic_netsplit_20260104_223136.txt  irc_chaotic_quit_20260104_195436.txt  irc_chaotic_quit_20260104_201014.txt  irc_chaotic_quit_20260104_203340.txt  irc_chaotic_quit_20260104_212202.txt  irc_chaotic_quit_20260104_214919.txt  irc_chaotic_quit_20260104_215228.txt  irc_chaotic_quit_20260104_215937.txt  irc_chaotic_sendq_exceeded_20260104_233627.txt  irc_philosophical_mass_kick_20260104_232220.txt  irc_philosophical_natural_20260104_214430.txt  irc_philosophical_ping_timeout_20260104_205803.txt  (+14 more)
(+153 files in other folders)
